# research-papers

./: .gitignore
paper1-vuln-prioritization/: .gitignore  Dockerfile  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
paper1-vuln-prioritization/configs/: approver_policy_a.yaml  approver_policy_b.yaml  blackout_light.yaml  blackout_none.yaml  blackout_primary.yaml  blackout_strict_monthly.yaml  experiment_smoke.yaml  gbt.yaml  identity_ad_entra.yaml  identity_federated.yaml  labels.yaml  primary.yaml  primary_dryrun.yaml  primary_full_template.yaml  sensitivity.yaml  smoke.yaml  strategies.yaml
paper1-vuln-prioritization/data/artifacts/: calibration_smoke_logit.json  calibration_smoke_ridge.json  gbt_smoke_result.json
paper1-vuln-prioritization/data/catalog/: host_type_defaults.yaml  mitigation_catalog.yaml  os_catalog.yaml  products.yaml  service_catalog.yaml
paper1-vuln-prioritization/data/fixtures/: kev_toy.json  poc_toy.csv  vulnerabilities_toy.json
paper1-vuln-prioritization/data/snapshots/: MANIFEST.json
paper1-vuln-prioritization/docs/: REPRODUCIBILITY.md
paper1-vuln-prioritization/paper/: draft_results_discussion.md
paper1-vuln-prioritization/paper/acm/: README.md  main.tex  references.bib
paper1-vuln-prioritization/paper/closeout/: PAPER1_BLOCKERS.md  PAPER1_CLOSEOUT_SUMMARY.md  PAPER1_NEXT_ACTIONS.md  PAPER1_READY_STATE.md
paper1-vuln-prioritization/paper/eb1a/: CLAIM_BOUNDARIES.md  EB1A_EVIDENCE_SUMMARY.md  EXHIBIT_DESCRIPTION.md  EXPERT_REVIEWER_OUTREACH.md  FIELD_SIGNIFICANCE_STATEMENT.md  LINKEDIN_POST.md  MEDIA_PITCH.md  ORIGINAL_CONTRIBUTION_STATEMENT.md  RECOMMENDER_TALKING_POINTS.md  TECHNICAL_CONTRIBUTION_SUMMARY.md  USCIS_FRIENDLY_SUMMARY.md
paper1-vuln-prioritization/paper/manuscript/: citation_audit.md  claim_safety_audit.md  paper_full_draft.md  paper_submission_draft.md  references.bib  references_todo.md  reproducibility_appendix.md  submission_checklist.md  table_figure_index.md  venue_formatting_plan.md
paper1-vuln-prioritization/paper/report/: report_manifest.json  summary.md
paper1-vuln-prioritization/paper/tables/: primary_per_cell_summary.csv  sensitivity_blackout.csv  sensitivity_capacity.csv  sensitivity_feature_ablation.md  sensitivity_weight_family.csv  stop_rule_summary.md  table_acceptance_checks.csv  table_acceptance_checks.md  (+15 more)
paper1-vuln-prioritization/scripts/: build_pairs_smoke.py  calibrate_weights_smoke.py  fetch_epss.py  fetch_kev.py  fetch_nvd.py  fetch_poc.py  gbt_smoke.py  generate_primary_report.py  generate_synthetic_fleet.py  inspect_primary_results.py  metrics_smoke.py  paper2_claim_audit.py  paper2_compute_pilot_gate.py  paper2_compute_primary_completion.py  paper2_feasibility_probe.py  paper2_generate_step9_outputs.py  paper2_md_to_latex.py  paper2_run_pilot_batch.py  paper2_run_primary_batch.py  run_primary_experiment.py  run_smoke_experiment.py  scheduler_smoke.py  score_pairs_smoke.py  stats_smoke.py  validate_snapshots.py
paper1-vuln-prioritization/tests/: conftest.py  test_config.py  test_evaluation_audit_metrics.py  test_evaluation_compliance_metrics.py  test_evaluation_eehda.py  test_evaluation_integration.py  test_evaluation_ranking_metrics.py  test_evaluation_scheduler_metrics.py  test_evaluation_statistical_tests.py  test_experiments_inspect.py  test_experiments_primary.py  test_experiments_primary_execution.py  test_experiments_smoke.py  test_feeds_base.py  test_feeds_cve.py  test_feeds_epss.py  test_feeds_kev.py  test_feeds_nvd.py  test_feeds_poc.py  test_hash_chain.py  test_model_calibration.py  test_model_features.py  test_model_frames.py  test_model_gbt_comparator.py  test_model_labels.py  test_model_linear_model.py  test_model_no_leakage_integration.py  test_model_pairs.py  test_model_scoring.py  test_model_splits.py  test_model_strategies.py  test_model_strategy_integration.py  test_model_weights.py  test_no_future_data.py  test_paper1_weights_locked.py  test_paper2_batch_loader.py  test_paper2_batch_runner.py  test_paper2_cell_loader.py  test_paper2_claim_audit.py  test_paper2_feasibility_probe.py  (+31 more)
paper3/: README.md  REPOSITORY_RELEASE_CHECKLIST.md  pyproject.toml
paper3/design/: EXPERIMENTAL_DESIGN_v0_1.md  SCHEMA_v0_1.md  TASK_SPECS.md
paper3/feasibility/: STEP2_DATASET_FEASIBILITY.md  STEP2_PRIOR_ART_FALSIFICATION.md
paper3/manuscript/: FIGURE_QUALITY_CHECK.md  PAPER3_DECISION_LOG.md  PAPER3_SUBMISSION_CHECKLIST.md  STEP1_RESEARCH_VALIDATION.md  paper_draft_v0.1.md  supplemental_appendix_v0.1.md
paper3/src/: recompute_failure_flags.py  regenerate_figs.py  run_evaluation.py
paper4/: pyproject.toml
paper4/design/: PAPER4_PROTOCOL.md
paper4/manuscript/: PAPER4_DECISION_LOG.md  paper4_draft_v0.1.md
paper4/src/: run_evaluation.py
(+1063 files in other folders)
