[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper1"
version = "0.1.0"
description = "Open, reproducible, audit-evidence-producing vulnerability-host pair prioritization framework"
authors = [{ name = "Harshavardhan Malla" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "pydantic>=2.6,<3",
    "pandas>=2.1,<3",
    "numpy>=1.26,<2.3",
    "scipy>=1.11,<2",
    "statsmodels>=0.14,<1",
    "scikit-learn>=1.4,<2",
    "lightgbm>=4.1,<5",
    "matplotlib>=3.8,<4",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.5,<1",
    "build>=1.0,<2",
]

[project.urls]
"Repository" = "https://github.com/hmalla/paper1-vuln-prioritization"

[tool.setuptools.packages.find]
where = ["src"]
include = ["paper1*"]

[tool.setuptools.package-data]
paper1 = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:lightgbm.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "RUF"]
