[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hygienebench"
version = "0.2.0"
description = "HygieneBench: A reproducible synthetic benchmark for cyber-hygiene anomaly detection across identity, endpoint, and patch telemetry"
authors = [
    {name = "Harshavardhan Malla"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = [
    "cybersecurity",
    "anomaly-detection",
    "benchmark",
    "cyber-hygiene",
    "active-directory",
    "patch-management",
    "telemetry",
    "synthetic-data",
    "reproducible-research",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "networkx>=3.0",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1.0"]

[project.urls]
"Homepage"       = "https://github.com/Harshavardhanmalla-Labs/research-papers/tree/main/paper3"
"Bug Tracker"    = "https://github.com/Harshavardhanmalla-Labs/research-papers/issues"
"Documentation"  = "https://github.com/Harshavardhanmalla-Labs/research-papers/tree/main/paper3#readme"
"Source"         = "https://github.com/Harshavardhanmalla-Labs/research-papers/tree/main/paper3"

[project.scripts]
hygienebench-generate = "hygienebench.cli:main_generate"
hygienebench-validate = "hygienebench.cli:main_validate"
hygienebench-evaluate = "hygienebench.cli:main_evaluate"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hygienebench = ["py.typed", "data/*.json"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
