[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hygieneprio"
version = "0.1.0"
description = "HygienePrio: Cyber-Hygiene Signal Augmentation for EPSS-Weighted Vulnerability Prioritization"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "numpy >= 1.24",
    "pandas >= 2.0",
    "scipy >= 1.10",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]
